[gd_scene load_steps=7 format=3 uid="uid://cjkba3r58vrt7"]

[ext_resource type="Script" uid="uid://c8wg3arf71lrm" path="res://Screens/game_screen.gd" id="1_cw4t1"]
[ext_resource type="Texture2D" uid="uid://cceg33dgmldgx" path="res://Images/afdsafs.png" id="2_pvcf7"]
[ext_resource type="PackedScene" uid="uid://dmeoqahxkto01" path="res://Tabs/attribute_tab.tscn" id="3_uner2"]
[ext_resource type="PackedScene" uid="uid://6dlrgv7rgovn" path="res://Tabs/Combat/combat_tab.tscn" id="4_bsbiy"]
[ext_resource type="PackedScene" uid="uid://cyjhvh7i30xt5" path="res://player.tscn" id="5_pvual"]
[ext_resource type="PackedScene" uid="uid://bpo4o8uxxc0a2" path="res://Graphic Elements/player_stat_display.tscn" id="6_krq6o"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cw4t1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pvcf7")

[node name="TabContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Attributes" parent="TabContainer" instance=ExtResource("3_uner2")]
visible = false
layout_mode = 1

[node name="Combat" parent="TabContainer" instance=ExtResource("4_bsbiy")]
visible = false
layout_mode = 1

[node name="TabButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 0.05

[node name="PlayerStatDisplay" parent="." instance=ExtResource("6_krq6o")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.5
anchor_right = 0.225
anchor_bottom = 0.5

[node name="Player" parent="PlayerStatDisplay" instance=ExtResource("5_pvual")]
